Add ComplianceSuite and ZeroTest